--- a/src/index.html
+++ b/src/index.html
@@ -14,13 +14,32 @@
     <div class="container">
       <div class="intro">
         <main class="intro__main">
-          <span>Hi there</span>
-          <h1 class='intro__title'>I`m <span class='accent'>Vladislav Stepanov</span></h1>
-          <p class='intro__subtitle'>A Web developer</p>
+          <div class="overflow">
+            <span class='intro__greetings'>Hi there</span>
+          </div>
+          <div class="overflow">
+            <h1 class='intro__title'>I`m <span class='accent'>Vladislav Stepanov</span></h1>
+          </div>
+          <div class="overflow">
+            <p class='intro__subtitle'>A Web developer</p>
+          </div>
         </main>
         <div class="intro__img">
           <div class="intro__img-item"></div>
         </div>
+      </div>
+    </div>
+  </section>
+
+  <section class='section'>
+    <div class="container">
+      <div class="about">
+        <h2 class='title'>About me</h2>
+        <p class='about__desc'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro aliquid laudantium
+          placeat
+          pariatur aliquam
+          tenetur cum ut nemo cumque dolorem, in, soluta blanditiis praesentium voluptatem asperiores distinctio nostrum
+          vitae voluptates.</p>
       </div>
     </div>
   </section>
