--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <title>Webpack</title>
 </head>
 
-<body>
+<body class='load'>
   <section class='intro__section' id='intro__section'>
     <div class="container">
       <div class="intro">
