My skills section

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class='load'>
-  <section class='intro__section' id='intro__section'>
+  <section class='intro__section no-pad' id='intro__section'>
     <div class="container">
       <div class="intro">
         <main class="intro__main">
@@ -40,6 +40,74 @@
           pariatur aliquam
           tenetur cum ut nemo cumque dolorem, in, soluta blanditiis praesentium voluptatem asperiores distinctio nostrum
           vitae voluptates.</p>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <div class="container">
+      <h2 class='title'>My skills</h2>
+      <div class="skill">
+        <figure class="skill__item">
+          <figcaption class="skill__item-title">Webpack</figcaption>
+          <svg preserveAspectRatio="xMidYMid slice">
+            <use xlink:href='#webpack'></use>
+          </svg>
+        </figure>
+        <figure class="skill__item">
+          <figcaption class="skill__item-title">Git</figcaption>
+          <svg preserveAspectRatio="xMidYMid slice">
+            <use xlink:href='#git'></use>
+          </svg>
+        </figure>
+        <figure class="skill__item">
+          <figcaption class="skill__item-title">npm</figcaption>
+          <svg preserveAspectRatio="xMidYMid slice">
+            <use xlink:href='#npm'></use>
+          </svg>
+        </figure>
+        <figure class="skill__item">
+          <figcaption class="skill__item-title">HTML5</figcaption>
+          <svg preserveAspectRatio="xMidYMid slice">
+            <use xlink:href='#html'></use>
+          </svg>
+        </figure>
+        <figure class="skill__item">
+          <figcaption class="skill__item-title">CSS3</figcaption>
+          <svg preserveAspectRatio="xMidYMid slice">
+            <use xlink:href='#css'></use>
+          </svg>
+        </figure>
+        <figure class="skill__item">
+          <figcaption class="skill__item-title">Vue</figcaption>
+          <svg preserveAspectRatio="xMidYMid slice">
+            <use xlink:href='#vue'></use>
+          </svg>
+        </figure>
+        <figure class="skill__item">
+          <figcaption class="skill__item-title">Node JS</figcaption>
+          <svg preserveAspectRatio="xMidYMid slice">
+            <use xlink:href='#node'></use>
+          </svg>
+        </figure>
+        <figure class="skill__item">
+          <figcaption class="skill__item-title">ES6</figcaption>
+          <svg preserveAspectRatio="xMidYMid slice">
+            <use xlink:href='#js'></use>
+          </svg>
+        </figure>
+        <figure class="skill__item">
+          <figcaption class="skill__item-title">Nuxt</figcaption>
+          <svg preserveAspectRatio="xMidYMid slice">
+            <use xlink:href='#nuxt'></use>
+          </svg>
+        </figure>
+        <figure class="skill__item">
+          <figcaption class="skill__item-title">Nestjs</figcaption>
+          <svg preserveAspectRatio="xMidYMid slice">
+            <use xlink:href='#nestjs'></use>
+          </svg>
+        </figure>
       </div>
     </div>
   </section>
