--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,700&display=swap" rel="stylesheet">
-  <title>Webpack</title>
+  <title>Portfolio</title>
 </head>
 
 <body class='load'>
@@ -34,7 +34,9 @@
   <section class='section'>
     <div class="container">
       <div class="about">
-        <h2 class='title'>About me</h2>
+        <div class='title__wrap'>
+          <h2 class='title'>About me</h2>
+        </div>
         <p class='about__desc'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro aliquid laudantium
           placeat
           pariatur aliquam
@@ -46,7 +48,9 @@
 
   <section>
     <div class="container">
-      <h2 class='title'>My skills</h2>
+      <div class='title__wrap'>
+          <h2 class='title'>My skills</h2>
+        </div>
       <div class="skill">
         <figure class="skill__item">
           <figcaption class="skill__item-title">Webpack</figcaption>
