--- a/src/index.html
+++ b/src/index.html
@@ -18,14 +18,16 @@
             <span class='intro__greetings'>Hi there</span>
           </div>
           <div class="overflow">
-            <h1 class='intro__title'>I`m <span class='accent'>Vladislav Stepanov</span></h1>
+            <h1 class='intro__title'>I am&nbsp;<span class='accent'>Vladislav Stepanov</span></h1>
           </div>
           <div class="overflow">
             <p class='intro__subtitle'>A Web developer</p>
           </div>
         </main>
         <div class="intro__img">
-          <div class="intro__img-item"></div>
+          <div class="intro__img-holder">
+            <img class="intro__img-item" src="./assets/img/photo-active.jpg" alt="My photo">
+          </div>
         </div>
       </div>
     </div>
@@ -37,11 +39,15 @@
         <div class='title__wrap'>
           <h2 class='title'>About me</h2>
         </div>
-        <p class='about__desc'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro aliquid laudantium
-          placeat
-          pariatur aliquam
-          tenetur cum ut nemo cumque dolorem, in, soluta blanditiis praesentium voluptatem asperiores distinctio nostrum
-          vitae voluptates.</p>
+        <main class='about__main'>
+          <img class='about__img' src="./assets/img/photo-active.jpg" alt="My photo">
+          <p class='about__desc'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro aliquid laudantium
+            placeat
+            pariatur aliquam
+            tenetur cum ut nemo cumque dolorem, in, soluta blanditiis praesentium voluptatem asperiores distinctio
+            nostrum
+            vitae voluptates.</p>
+        </main>
       </div>
     </div>
   </section>
@@ -49,8 +55,8 @@
   <section>
     <div class="container">
       <div class='title__wrap'>
-          <h2 class='title'>My skills</h2>
-        </div>
+        <h2 class='title'>My skills</h2>
+      </div>
       <div class="skill">
         <figure class="skill__item">
           <figcaption class="skill__item-title">Webpack</figcaption>
