--- a/src/index.html
+++ b/src/index.html
@@ -18,13 +18,18 @@
             <span class='intro__greetings'>Hi there</span>
           </div>
           <div class="overflow">
-            <h1 class='intro__title'>I am&nbsp;<span class='accent'>Vladislav Stepanov</span></h1>
+            <h1 class='intro__title wow slideInDown'>
+              I am&nbsp;
+              <span class='accent'>
+                Vladislav Stepanov
+              </span>
+            </h1>
           </div>
           <div class="overflow">
-            <p class='intro__subtitle'>A Web developer</p>
+            <p class='intro__subtitle wow slideInLeft'>A Web developer</p>
           </div>
         </main>
-        <div class="intro__img">
+        <div class="intro__img wow fadeInRight">
           <div class="intro__img-holder">
             <img class="intro__img-item" src="./assets/img/photo-active.jpg" alt="My photo">
           </div>
@@ -37,11 +42,13 @@
     <div class="container">
       <div class="about">
         <div class='title__wrap'>
-          <h2 class='title'>About me</h2>
+          <h2 class='title wow fadeInDown'>About me</h2>
         </div>
         <main class='about__main'>
-          <img class='about__img' src="./assets/img/photo-active.jpg" alt="My photo">
-          <p class='about__desc'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro aliquid laudantium
+          <img class='about__img wow fadeInLeft' data-wow-delay=".5s" src="./assets/img/photo-active.jpg"
+            alt="My photo">
+          <p class='about__desc wow fadeInUp'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro aliquid
+            laudantium
             placeat
             pariatur aliquam
             tenetur cum ut nemo cumque dolorem, in, soluta blanditiis praesentium voluptatem asperiores distinctio
@@ -55,7 +62,7 @@
   <section>
     <div class="container">
       <div class='title__wrap'>
-        <h2 class='title'>My skills</h2>
+        <h2 class='title wow fadeInDown'>My skills</h2>
       </div>
       <div class="skill">
         <figure class="skill__item">
@@ -125,12 +132,12 @@
   <section>
     <div class="container">
       <div class="title__wrap">
-        <h2 class="title">My Portfolio</h2>
+        <h2 class="title wow fadeInDown">My Portfolio</h2>
       </div>
       <p>My github account</p>
       <main class='github__repos'>
         <script id='github__repo' type='text/x-handlebars-template'>
-          <figure class='github__repos__item'>
+          <figure class='github__repos__item wow fadeInDown' data-wow-delay='{{ animateDelay }}'>
             <figcaption class='github__repos__title'>
               <a href="{{ link }}">{{ title }}</a>
             </figcaption>
