--- a/src/index.html
+++ b/src/index.html
@@ -65,66 +65,14 @@
         <h2 class='title wow fadeInDown'>My skills</h2>
       </div>
       <div class="skill">
-        <figure class="skill__item">
-          <figcaption class="skill__item-title">Webpack</figcaption>
-          <svg preserveAspectRatio="xMidYMid slice">
-            <use xlink:href='#webpack'></use>
-          </svg>
-        </figure>
-        <figure class="skill__item">
-          <figcaption class="skill__item-title">Git</figcaption>
-          <svg preserveAspectRatio="xMidYMid slice">
-            <use xlink:href='#git'></use>
-          </svg>
-        </figure>
-        <figure class="skill__item">
-          <figcaption class="skill__item-title">npm</figcaption>
-          <svg preserveAspectRatio="xMidYMid slice">
-            <use xlink:href='#npm'></use>
-          </svg>
-        </figure>
-        <figure class="skill__item">
-          <figcaption class="skill__item-title">HTML5</figcaption>
-          <svg preserveAspectRatio="xMidYMid slice">
-            <use xlink:href='#html'></use>
-          </svg>
-        </figure>
-        <figure class="skill__item">
-          <figcaption class="skill__item-title">CSS3</figcaption>
-          <svg preserveAspectRatio="xMidYMid slice">
-            <use xlink:href='#css'></use>
-          </svg>
-        </figure>
-        <figure class="skill__item">
-          <figcaption class="skill__item-title">Vue</figcaption>
-          <svg preserveAspectRatio="xMidYMid slice">
-            <use xlink:href='#vue'></use>
-          </svg>
-        </figure>
-        <figure class="skill__item">
-          <figcaption class="skill__item-title">Node JS</figcaption>
-          <svg preserveAspectRatio="xMidYMid slice">
-            <use xlink:href='#node'></use>
-          </svg>
-        </figure>
-        <figure class="skill__item">
-          <figcaption class="skill__item-title">ES6</figcaption>
-          <svg preserveAspectRatio="xMidYMid slice">
-            <use xlink:href='#js'></use>
-          </svg>
-        </figure>
-        <figure class="skill__item">
-          <figcaption class="skill__item-title">Nuxt</figcaption>
-          <svg preserveAspectRatio="xMidYMid slice">
-            <use xlink:href='#nuxt'></use>
-          </svg>
-        </figure>
-        <figure class="skill__item">
-          <figcaption class="skill__item-title">Nestjs</figcaption>
-          <svg preserveAspectRatio="xMidYMid slice">
-            <use xlink:href='#nestjs'></use>
-          </svg>
-        </figure>
+        <script class='skill__item--template' type='text/x-handlebars-template'>
+          <figure class="skill__item wow fadeInUp" data-wow-delay="{{ delay }}">
+            <figcaption class="skill__item-title">{{ label }}</figcaption>
+            <svg preserveAspectRatio="xMidYMid slice">
+              <use xlink:href='{{ sprite }}'></use>
+            </svg>
+          </figure>
+        </script>
       </div>
     </div>
   </section>
