--- a/src/index.html
+++ b/src/index.html
@@ -96,6 +96,19 @@
       </main>
     </div>
   </section>
+
+  <section>
+    <div class="container">
+      <div class="title__wrap">
+        <h2 class='title wow fadeInDown'>Contact me</h2>
+      </div>
+      <form class="contact">
+        <input class='contact__input' type="text" placeholder="Your email">
+        <textarea class='contact__area' rows=1 placeholder="What do u want to tell me?"></textarea>
+        <button class='contact__button'>Send</button>
+      </form>
+    </div>
+  </section>
 </body>
 
 </html>
