--- a/src/index.html
+++ b/src/index.html
@@ -109,6 +109,20 @@
       </form>
     </div>
   </section>
+
+  <footer>
+    <div class="container">
+      <div class="social">
+        <script class='social__item--template' type='text/x-handlebars-template'>
+          <a class='social__item' target="_blank" href="{{ link }}">
+            <svg>
+              <use xlink:href='{{ sprite }}'></use>
+            </svg>
+          </a>
+        </script>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
